--- a/gb/20/2/28/n11901672.md
+++ b/gb/20/2/28/n11901672.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kjrkiz2594/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kjrkiz2594/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kjrkiz2594/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kjrkiz2594/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kjrkiz2594/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osgirb392/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/osgirb392/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osgirb392/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osgirb392/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陈茂波拒全民派钱分开审议</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年02月28日讯】（大纪元记者张家熙香港综合报导）财政司司长<a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E9%99%88%E8%8C%82%E6%B3%A2.md">陈茂波</a>26日发表新一份财政预算案，宣布向18岁以上香港永久性居民派1万元。民主派关注预算案中警方的预算大增至258亿元，有政党要求将警队预算独立审议，否则不会支持通过预算案。</p>
+	<p>【大纪元2020年02月28日讯】（大纪元记者张家熙香港综合报导）财政司司长<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E9%99%88%E8%8C%82%E6%B3%A2.md#1">陈茂波</a>26日发表新一份财政预算案，宣布向18岁以上香港永久性居民派1万元。民主派关注预算案中警方的预算大增至258亿元，有政党要求将警队预算独立审议，否则不会支持通过预算案。</p>
 <p>预算中警队在2020至21年度开支预算近258亿元，较2019-20年度原来预算增加近4份之1，比同年修订后的预算增加近22亿。警队个人薪酬津贴预算激增约9倍至25.49亿元。购买警队特别用途车辆、添购和更换水炮车及装甲车等的预算同样大增。</p>
-<p><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/tag/%E9%99%88%E8%8C%82%E6%B3%A2.md">陈茂波</a>27日出席立法会财委会回应议员质询，民主派和建制派议员均要求加快派钱。议会阵线朱凯廸质问陈茂波，会否将派钱的710亿元拨款分拆审议，但陈茂波表明不会考虑，又称“我即使有权都不会用”。</p>
+<p><ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E9%99%88%E8%8C%82%E6%B3%A2.md#1">陈茂波</a>27日出席立法会财委会回应议员质询，民主派和建制派议员均要求加快派钱。议会阵线朱凯廸质问陈茂波，会否将派钱的710亿元拨款分拆审议，但陈茂波表明不会考虑，又称“我即使有权都不会用”。</p>
 <p>人民力量陈志全批评，预算案将向巿民“回水”一万元，与258亿的警队开支捆绑，质疑是“一边派钱一边打市民”，他又说有部分巿民因而称宁愿不要1万元。</p>
 <p>香港本土毛孟静批评，陈的预算案是“一个局”，想一方面派掩口费，一方面为警队提供“豪装”。又不满陈至今坚拒回应为何让警队开支预算激增，斥他“完全卸膊”，同时低估香港人对警队的愤怒。</p>
 <p>民主党邝俊宇不满政府所有政策都与年轻人“割席”，18岁以下的没有钱派，但已移民的仍有钱派，质疑政府无法重拾年轻人的信心。他又形容预算案将派钱与警察开支绑捆审议是“魔鬼在细节”，但市民很警觉，要求将派钱抽出来审议。</p>
@@ -21,38 +21,45 @@
 <p>他续说，虽然现时市民对派钱的反应正面，但逐步消化和了解预算案内容后，跟进的评分或会有差异，他举例现时已慢慢听到社会上，不满增加警方人手编制和装备开支的声音。</p>
 <p>跟据以往的调查，陈茂波过往三份财政预算案的评价在跟进调查中变差。2019政预算案的满意率由即时调查的23%，跌至次轮跟进调查的19%，满意率净值由负16个百分点，跌至负33个百分点，评分由47.1分跌至42.5分。2017政预算案的即时满意率净值同是正数，为正18个百分点，但在次轮跟进调查的跌至负1个百分点，评分由55.7分跌至51分。◇</p>
 <p>责任编辑：李薇</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/28/n11901672.htm">陈茂波拒全民派钱分开审议</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11890348.htm">【珍言真语】商界领袖毛汉：疫情致生意损七成</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11814582.htm">港民主派区会正副主席晤陈茂波 倡全民派1万元</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/25/n10248409.htm">政府派钱四千未挽回民心</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890652.htm">【更新】疫情下北京管制严厉 中共自吹遭讥讽</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11899028.htm">【翻墙必看】分析：武汉肺炎死了多少人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11898771.htm">【一线采访】北京封区封道 食品价高涨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11898503.htm">中国企业经营空前滑坡 北京喊复工地方罢工？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875921.htm">蝗虫集体进攻 为何单单绕开他们</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/23/n11888879.htm">张天师治瘟疫的妙法</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886333.htm">纪实散文：中国封城下的民生面面观（上）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880656.htm">【三国英雄14】曹操如何对待背叛自己的人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11897989.htm">武汉确诊女子刑满释放坐车回北京 网络炸锅</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11896399.htm">【翻墙必看】山东卫健委内部文件曝骇人真相</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11898004.htm">从央视辞职 公民记者李泽华武汉遭国安抓捕</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/27/n11899370.htm">【拍案惊奇】武汉闯关四式 韩国防疫不封城？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880656.htm">【三国英雄14】曹操如何对待背叛自己的人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852024.htm">【我来说西游】悟空大闹黑风山</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11893329.htm">武汉封城深夜传凄厉吼叫 台艺人：地狱的声音</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11897251.htm">刘真脸书更新贴文 粉丝关注留言打气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/25/n11895011.htm">殷琦夫婿公司投入“制罩队” 暖曝：台湾需要</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11898270.htm">疫情下的影视圈 制片人每天睁眼就计算损失</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/26/n11896115.htm">疫情下众星在家隔离 范冰冰分享戒糖减肥法</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/18/3/25/n10248409.md#1">政府派钱四千未挽回民心</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/1/23/n11814582.md#1">港民主派区会正副主席晤陈茂波 倡全民派1万元</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/2/23/n11890348.md#1">【珍言真语】商界领袖毛汉：疫情致生意损七成</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/26/n12775760.md#1">香港预算案满意净值创23年新低</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjrkiz2594/djy/blob/master/gb/20/2/28/n11901672.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kjrkiz2594/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjrkiz2594/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjrkiz2594/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kjrkiz2594/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/osgirb392/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/27/n11350548.md#1" target="_blank">王友群：陈独秀等10位中共党魁的最后结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/22/n12767168.md#1">辛丑八卦2021年两岸国运</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/12/30/n12653772.md#1">【命理】相士算他活不过30岁 为何不应验？</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/21/n12765804.md#1">预言中的大瘟疫和中国变局</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/18/3/8/n10200680.md#1">【西游义趣】之二：一个信念贯穿沙僧的前世今生</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/24/n12772629.md#1">【财商天下】习点赞航天股价大跌 二十大开战？</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/25/n12773369.md#1">【远见快评】如何建美式极权？左派给惊人答案</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/25/n12774955.md#1">【新闻大家谈】两暗桩 美国会警长曝悲剧内幕</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768556.md#1">被拍到与冯绍峰游三亚 赵丽颖高情商称呼婆婆</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12770385.md#1">北京纪念华国锋百年冥诞 习近平为何不出席</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768678.md#1">忧江泽民死后遭清算 博裕资本部分迁往新加坡</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768556.md#1">被拍到与冯绍峰游三亚 赵丽颖高情商称呼婆婆</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/22/n12768344.md#1">吴孟达确诊罹患肝癌 手术后没力气说话</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769489.md#1">林志玲夫妇首度合体代言 AKIRA全程中文应答</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769457.md#1">Janet速产二胎不到3小时“来不及打无痛分娩”</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769225.md#1">演艺圈收入骤减 贺一航之子曾治豪到餐厅实习</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769229.md#1">俄罗斯奇特的自然景观──“贝加尔湖禅”</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768699.md#1">缺乏维生素D易感染新冠 1招补充最快</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/19/n12762302.md#1">偏头痛有哪些前兆？有时像中风 掌握1方法防发作</a></li>
+<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12770063.md#1">春天是轻松减肥和排毒的绝佳时机</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/osgirb392/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/osgirb392/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/28/n11901672.htm">陈茂波拒全民派钱分开审议</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/osgirb392/djy/blob/master/gb/20/2/28/n11901672.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osgirb392/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osgirb392/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osgirb392/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
